[tool.poetry]
name = "dataVisulization"
version = "0.1.0"
description = ""
authors = ["BoshraJaber <boshrajaber94@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
PySnooper = "^1.0.0"
jupyterlab = "^3.2.1"
seaborn = "^0.11.2"
beautifulsoup4 = "^4.10.0"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^21.9b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
